# Beluga

./: .gitignore  .gitmodules  CMakeLists.txt  Gemfile
IPC/: beluga_server.rb  phpClient.php  shutdown_server.rb  test_client.rb  test_phpClient.php
IPC/clients/: single_vehicle_circle.m  two_vehicle_circles.m
IPC/matlab/: MonitorGUI.fig  MonitorGUI.m  ServerSettings.m  belugaGetControlIPC.m  belugaGetKinematicsIPC.m  belugaGetPositionIPC.m  belugaGetPositionPod.m  belugaGetWaypointIPC.m  belugaIPCMessage.m  belugaParseString.m  belugaSendCommandIPC.m  belugaSetControlIPC.m  belugaSetKinematicsIPC.m  belugaSetPositionIPC.m  belugaSetPositionPod.m  belugaSetWaypointIPC.m  closeBelugaSocket.m  getBelugaIPCSocket.m  startBelugaServer.m  (+3 more)
cgi/: README  beluga.html  beluga.php  beluga_down.html  beluga_server.rb  index.html
experiment/: RobotTest.m
src/: BelugaConstants.h  BelugaControl.cpp  BelugaControl.h  BelugaDynamics.cpp  BelugaDynamics.h  BelugaIPCClient.cpp  BelugaIPCClient.h  BelugaRobot.cpp  BelugaRobot.h  BelugaServer.cpp  BelugaServer.h  BelugaTracker.cpp  BelugaTracker.h  BelugaTrackerGUI.cpp  BelugaTrackerGUI.h  BelugaVideoSetupDialog.cpp  BelugaVideoSetupDialog.h  CalibrationDataFile.cpp  CalibrationDataFile.h  ControlLaw.cpp  ControlLaw.h  Controller.cpp  Controller.h  CoordinateTransforms.cpp  CoordinateTransforms.h  DSGYBlobber.cpp  DSGYBlobber.h  TrackerExtras.cpp  TrackerExtras.h  rhubarbClient.h  rhubarbSocket.h
test/: BelugaTest.h  Rakefile  make_test  test_BelugaIPCClient.cpp  test_CalibrationDataFile.cpp  test_Controller.cpp  test_CoordinateTransform.cpp
www/: beluga.html  beluga.php  index.php  noscript.html
(+88 files in other folders)
